# GRIN

./: .gitignore  README.md  predefine.template
common/: error.h
demo_storage/: .gitignore  CMakeLists.txt  predefine.h
demo_storage/src/: predefine.h  storage.cc  storage.h
demo_storage/src/common/: error.cc  message.cc
demo_storage/src/index/: external_id.cc  internal_id.cc  label.cc  order.cc  pk.cc
demo_storage/src/partition/: partition.cc  reference.cc  topology.cc
demo_storage/src/property/: label.cc  primarykey.cc  property.cc  propertylist.cc  row.cc  topology.cc  type.cc  value.cc
demo_storage/src/topology/: adjacentlist.cc  edgelist.cc  structure.cc  vertexlist.cc
demo_storage/storage/: loadmoderngraph.cc  loadmoderngraph.h  storage.cc  storage.h
demo_storage/test/: config.h  test.c  test_index.cc  test_index_label.cc  test_label.cc  test_partition.cc  test_partition_reference.cc  test_partition_topology.cc  test_property_list.cc  test_property_primarykey.cc  test_property_topology.cc  test_property_type.cc  test_property_value.cc  test_topology.cc
docs/: 5.property_api.html  6.index_api.html  extension.html  genindex.html  get_started.html  property_api.html
docs/.doctrees/: environment.pickle  extension.doctree  get_started.doctree  handler.doctree  index.doctree  index_api.doctree  partition_api.doctree  property_api.doctree
docs/_sources/: extension.rst.txt  topology_api.rst.txt
docs/html/: .buildinfo  0.get_started.html  1.return_value.html  2.api_naming.html  3.topology_api.html  4.partition_api.html  5.property_api.html  6.index_api.html  7.extension.html  api_naming.html  developer_guide.html  genindex.html  get_started.html  handler.html  index.html  index_api.html  naming.html  objects.inv  partition_api.html  return_value.html  search.html  searchindex.js  topology_api.html
docs/html/.doctrees/: 0.get_started.doctree  1.return_value.doctree  2.api_naming.doctree  3.topology_api.doctree  4.partition_api.doctree  5.property_api.doctree  6.index_api.doctree  7.extension.doctree  api_naming.doctree  environment.pickle  naming.doctree  return_value.doctree  topology_api.doctree
docs/html/_sources/: 3.topology_api.rst.txt  7.extension.rst.txt  api_naming.rst.txt  get_started.rst.txt  handler.rst.txt  naming.rst.txt  return_value.rst.txt
docs/html/_sources/api/: 1.topology_api.rst.txt  2.property_api.rst.txt  4.index_api.rst.txt  4.partition_api.rst.txt  5.property_api.rst.txt  6.extension.rst.txt  partition_api.rst.txt
docs/html/_sources/guide/: 1.return_value.rst.txt
docs/html/api/: 1.topology_api.html  2.property_api.html  3.partition_api.html  3.topology_api.html  4.index_api.html  4.partition_api.html  5.common_api.html  5.property_api.html  6.extension.html  6.extension_api.html  6.index_api.html  7.extension.html  partition_api.html  property_api.html  topology_api.html
docs/html/guide/: 1.return_value.html  2.api_naming.html  storage.html  user.html
docs/source/: 0.get_started.rst  1.return_value.rst  3.topology_api.rst  4.partition_api.rst  5.property_api.rst  6.index_api.rst  api_naming.rst  conf.py  developer_guide.rst  get_started.rst  index.rst  index_api.rst  partition_api.rst  property_api.rst  return_value.rst  topology_api.rst  validation.rst
docs/source/api/: 2.property_api.rst  3.partition_api.rst  5.common_api.rst  6.extension_api.rst
docs/source/guide/: storage.rst  user.rst
extension/: handle.h
extension/include/: indexed_adjacent_list.h  indexed_adjacent_list_iterator.h  list_chain.h  predefine.template  predefine.template.h  static_message.h
extension/include/topology/: list_chain.h  lists.h
extension/src/: indexed_adjacent_list.cc  indexed_adjacent_list_iterator.cc  list_chain.cc  static_message.cc
grin/: predefine.template
grin/common/: error.h
grin/partition/: reference.h
grin/property/: primarykey.h
include/: predefine.template  predefine.template.h
include/common/: enum_types.h  error.h  message.h  schema.h
include/index/: external_id.h  internal_id.h  label.h  order.h  original_id.h  pk.h
include/partition/: partition.h  property.h  reference.h  topology.h
include/property/: column.h  label.h  partition.h  primarykey.h  property.h  propertylist.h  row.h  topology.h  type.h  value.h
include/topology/: adjacentlist.h  edgelist.h  structure.h  vertexlist.h
index/: label.h  order.h  original_id.h
partition/: partition.h  reference.h  topology.h
property/: partition.h  primarykey.h  property.h  propertylist.h  propertytable.h  row.h  topology.h  type.h
proto/: gie_schema.proto  graph.proto  message.h  storage.proto
proto/gie_data_model/: common.proto  data_model.proto  data_type.proto  partition.proto  schema.proto  statistics.proto
proto/grin_schema/: data_type.proto  graph.proto  partition.proto  schema.proto
rust/: Cargo.toml  README.md  codegen.py  grin.rs  grin_GraphAr.h  grin_GraphAr.rs  grin_all.h  grin_all.rs  grin_demo_storage.h  grin_demo_storage.rs  grin_gart.h  grin_gart.rs  grin_v6d.h  grin_v6d.rs  parse.py
scripts/: check_predefine.py  enabled_apis.py
storage/GART/: predefine.h
storage/GraphAr/: predefine.h
storage/demo_storage/: predefine.h
storage/v6d/: features.h  predefine.h
template/: features.h  predefine.h
test/: ext_test.c  test.c  wcc.c
topology/: adjacentlist.h  datatype.h  edgelist.h  structure.h  vertexlist.h
yaml/: schema.yaml
