[package]
name = "grin"
version = "0.1.4"
authors = ["dijie"]

[dependencies]
cfg-if = "0.1"

[features]
grin_predefine_h_ = []
grin_assume_has_directed_graph = []
grin_assume_has_undirected_graph = []
grin_assume_has_multi_edge_graph = []
grin_with_vertex_data = []
grin_with_edge_data = []
grin_enable_vertex_list = []
grin_enable_vertex_list_array = []
grin_enable_vertex_list_iterator = []
grin_enable_edge_list = []
grin_enable_edge_list_array = []
grin_enable_edge_list_iterator = []
grin_enable_adjacent_list = []
grin_enable_adjacent_list_array = []
grin_enable_adjacent_list_iterator = []
grin_enable_graph_partition = []
grin_assume_edge_cut_partition = []
grin_assume_vertex_cut_partition = []
grin_assume_with_universal_vertices = []
grin_trait_natural_id_for_partition = []
grin_enable_vertex_ref = []
grin_trait_fast_vertex_ref = []
grin_enable_edge_ref = []
grin_trait_master_vertex_mirror_partition_list = []
grin_trait_mirror_vertex_mirror_partition_list = []
grin_trait_master_edge_mirror_partition_list = []
grin_trait_mirror_edge_mirror_partition_list = []
grin_trait_select_master_for_vertex_list = []
grin_trait_select_partition_for_vertex_list = []
grin_trait_select_master_for_edge_list = []
grin_trait_select_partition_for_edge_list = []
grin_trait_select_master_neighbor_for_adjacent_list = []
grin_trait_select_neighbor_partition_for_adjacent_list = []
grin_enable_row = []
grin_trait_const_value_ptr = []
grin_enable_schema = []
grin_trait_property_value_of_float_array = []
grin_with_vertex_property = []
grin_enable_vertex_primary_keys = []
grin_with_edge_property = []
grin_enable_edge_primary_keys = []
grin_with_vertex_label = []
grin_with_edge_label = []
grin_assume_all_vertex_list_sorted = []
grin_enable_vertex_internal_id_index = []
grin_enable_vertex_external_id_of_int64 = []
grin_enable_vertex_external_id_of_string = []
grin_enable_vertex_pk_index = []
grin_enable_edge_pk_index = []
grin_features_enable_v6d = ['grin_assume_has_directed_graph', 'grin_assume_has_undirected_graph', 'grin_assume_has_multi_edge_graph', 'grin_enable_vertex_list', 'grin_enable_vertex_list_array', 'grin_enable_vertex_list_iterator', 'grin_enable_adjacent_list', 'grin_enable_adjacent_list_array', 'grin_enable_adjacent_list_iterator', 'grin_enable_graph_partition', 'grin_assume_edge_cut_partition', 'grin_trait_natural_id_for_partition', 'grin_enable_vertex_ref', 'grin_trait_fast_vertex_ref', 'grin_trait_select_master_for_vertex_list', 'grin_enable_row', 'grin_enable_schema', 'grin_trait_property_value_of_float_array', 'grin_with_vertex_property', 'grin_enable_vertex_primary_keys', 'grin_with_edge_property', 'grin_enable_vertex_internal_id_index', 'grin_enable_vertex_external_id_of_int64', 'grin_enable_vertex_pk_index']
grin_features_enable_gart = ['grin_assume_has_undirected_graph', 'grin_assume_has_multi_edge_graph', 'grin_enable_vertex_list', 'grin_enable_vertex_list_iterator', 'grin_enable_adjacent_list', 'grin_enable_adjacent_list_iterator', 'grin_enable_graph_partition', 'grin_assume_edge_cut_partition', 'grin_trait_natural_id_for_partition', 'grin_enable_vertex_ref', 'grin_trait_fast_vertex_ref', 'grin_trait_select_master_for_vertex_list', 'grin_enable_row', 'grin_trait_const_value_ptr', 'grin_enable_schema', 'grin_trait_property_value_of_float_array', 'grin_with_vertex_property', 'grin_with_edge_property', 'grin_enable_vertex_internal_id_index', 'grin_enable_vertex_external_id_of_int64']
grin_features_enable_graphar = ['grin_assume_has_multi_edge_graph', 'grin_enable_vertex_list', 'grin_enable_vertex_list_array', 'grin_enable_vertex_list_iterator', 'grin_enable_edge_list', 'grin_enable_edge_list_iterator', 'grin_enable_adjacent_list', 'grin_enable_adjacent_list_iterator', 'grin_enable_graph_partition', 'grin_trait_natural_id_for_partition', 'grin_enable_vertex_ref', 'grin_trait_fast_vertex_ref', 'grin_trait_master_vertex_mirror_partition_list', 'grin_trait_mirror_vertex_mirror_partition_list', 'grin_trait_select_master_for_vertex_list', 'grin_trait_select_partition_for_vertex_list', 'grin_enable_row', 'grin_enable_schema', 'grin_with_vertex_property', 'grin_enable_vertex_primary_keys', 'grin_with_edge_property', 'grin_trait_property_value_of_float_array', 'grin_assume_all_vertex_list_sorted', 'grin_enable_vertex_internal_id_index', 'grin_enable_vertex_external_id_of_int64']
